# fhir_bot

./: .dockerignore  .env  .envrc  .gitignore  Dockerfile  Makefile  main.py  pyproject.toml  requirements.txt  test_fhir_request.py
models/: response_models.py
tests/: test_alergias.py  test_banderas.py  test_conditions.py  test_determinants.py  test_disponibilidad.py  test_family_history.py  test_medicamentos.py  test_observaciones.py  test_patient.py  test_patologicos.py  test_prevention.py
utils/: fhir_utils.py
